[package]
name = "misc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
env_logger = "0.10.0"
reqwest = { version = "0.11.18", features = ["native-tls-vendored"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
futures = "0.3.1"
actix-web-lab = "0.19.1"
